feat: Added Spicord-Support

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -1,1 +1,14 @@
+loading.data_IOException=Es gab eine IOException, beim Versuch fehlende Dateien im Plugin-Datenordner zu regenerieren.\n\
+Stacktrace:\n\
+%error%
+loading.embed.IOException=IOException, während des Ladens vom Embed:\n\
+Detaillierter Fehler:\n\
+%error%
+loading.spicord.bot_available=Yolo ist dazu konfiguriert, Spicord zum Melden von Toden zu nutzen.
+loading.spicord.bot_unavailable=Yolo ist dazu konfiguriert, Spicord zum Melden von Toden zu nutzen, es ist aber kein Bot verfügbar!
 player.ban.death=[Yolo] Du bist leider gestorben und kannst daher nicht mehr auf diesem hardcore Server spielen. :(
+sending.failed=Es gab einen Fehler beim Senden der Todesnachricht.\n\
+Detaillierter Fehler:\n\
+%error%
+sending.no_death_message=Starb ohne genauen Grund.
+sending.null_channel=Die gegebende Kanal-id hat keinen passenden Kanal ergeben.
