refactor: Made the implementation of sending Discord messages more robust.

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -6,6 +6,7 @@ Detaillierter Fehler:\n\
 %error%
 loading.spicord.bot_available=Yolo ist dazu konfiguriert, Spicord zum Melden von Toden zu nutzen.
 loading.spicord.bot_unavailable=Yolo ist dazu konfiguriert, Spicord zum Melden von Toden zu nutzen, es ist aber kein Bot verfügbar!
+loading.spicord.invalidId=Yolo wurde dazu konfiguriert Spicord zu nutzen, es konnte aber keine valide Kanal-ID gefunden werden!
 player.ban.death=[Yolo] Du bist leider gestorben und kannst daher nicht mehr auf diesem hardcore Server spielen. :(
 sending.failed=Es gab einen Fehler beim Senden der Todesnachricht.\n\
 Detaillierter Fehler:\n\
