feat: Added support for custom resource-packs and toggleable "force" flag

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -1,9 +1,14 @@
+loading.configUpdateFail=Konnte die Konfiguration nicht aktualisieren, da sie nicht \
+gespeichert werden konnte. Details: \n\
+%error%
 loading.data_IOException=Es gab eine IOException, beim Versuch fehlende Dateien im Plugin-Datenordner zu regenerieren.\n\
 Stacktrace:\n\
 %error%
 loading.embed.IOException=IOException, während des Ladens vom Embed:\n\
 Detaillierter Fehler:\n\
 %error%
+loading.resourcePack.invalid=Das eingestellte Resourcepack konnte nicht heruntergeladen werden, oder die Checksum ist anders.\n\
+Es wird nun das Standard-Resourcepack verwendet.
 loading.spicord.bot_available=Yolo ist dazu konfiguriert, Spicord zum Melden von Toden zu nutzen.
 loading.spicord.bot_unavailable=Yolo ist dazu konfiguriert, Spicord zum Melden von Toden zu nutzen, es ist aber kein Bot verfügbar!
 loading.spicord.invalidId=Yolo wurde dazu konfiguriert Spicord zu nutzen, es konnte aber keine valide Kanal-ID gefunden werden!
