fix: Fixed several bugs, that occurred during tests. - Fixed, that only the last placeholder would be replaced in customizable messages. - Fixed, that the SpicordManager was initialized without Spicord being present, leading to `ClassNotFound` exceptions. - Fixed some minor inconsistencies.

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -3,7 +3,8 @@ gespeichert werden konnte. Details: \n\
 %error%
 loading.resourcePack.invalid=Das eingestellte Resource-pack konnte nicht heruntergeladen werden, oder die Checksum ist anders.\n\
 Es wird nun das Standard-Resource-pack verwendet.
-loading.spicord.bot_available=Yolo ist dazu konfiguriert, Spicord zum Melden von Toden zu nutzen.
+loading.spicord.bot_available=Yolo ist dazu konfiguriert, Spicord zum Melden von Events zu \
+nutzen.
 loading.spicord.bot_unavailable=Yolo ist dazu konfiguriert, Spicord zum Melden von Toden zu nutzen, es ist aber kein Bot verfügbar!
 loading.spicord.invalidId=Yolo wurde dazu konfiguriert Spicord zu nutzen, es konnte aber keine valide Kanal-ID gefunden werden!
 player.ban.death=[Yolo] Du bist leider gestorben und kannst daher nicht mehr auf diesem hardcore Server spielen. :(
