--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -8,6 +8,8 @@ nutzen.
 loading.spicord.bot_unavailable=Yolo ist dazu konfiguriert, Spicord zum Melden von Toden zu nutzen, es ist aber kein Bot verfügbar!
 loading.spicord.invalidId=Yolo wurde dazu konfiguriert Spicord zu nutzen, es konnte aber keine valide Kanal-ID gefunden werden!
 player.ban.death=[Yolo] Du bist leider gestorben und kannst daher nicht mehr auf diesem hardcore Server spielen. :(
+player.saveInventory.offline=Das Inventar eines gestorbenen Spielers konnte nicht gespeichert werden, da dieser offline ist!\n\
+Daher wird es nicht möglich sein dieses beim Wiederbeleben wiederherzustellen.
 chatManager.noMessage=Konnte die angegebene Nachricht nicht finden, die gesendet \
 werden sollte.\n\
 Beschuldige etwas im Stack:}\n\
@@ -22,3 +24,12 @@ loading.spicord.failedMessageTemplate=Es gab ein Problem beim Laden einer Discor
 Nachrichtenvorlage:\n\
 %error%\n\
 %stack_trace%
+player.revive.noLastDeath=Der Todespunkt des wiederzubelebenden Spielers %player_name% \
+konnte nicht gefunden werden! Der Spieler wird an deren \
+Respawn-Punkt bleiben.
+player.revive.unsafeTeleport=%player_name% wurde beim Wiederbeleben nicht teleportiert, \
+da keine sichere Position gefunden werden konnte.
+player.revive.notOnline=Fehlschlag beim Wiederbeleben von %player_uuid%! Der Spieler \
+ist offline!
+player.revive.noReviveInventory=Der Spieler %player_name% hat kein Inventar zum \
+Wiederherstellen beim Wiederbeleben gespeichert.
