Multiple things changed (see description): fix(PlayerManager): Fixed the revive mechanic often not working correctly fix(PlayerManager): Fixed the safe teleportation mechanic on revival. feat: Added command `checkout_death_location` for admins to look for potentially duplicate items.

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -1,3 +1,22 @@
+#
+# This is program is a plugin for Minecraft Servers called "Yolo".
+# Copyright (C) 2023  eingruenesbeb
+#
+#     This program is free software: you can redistribute it and/or modify
+#     it under the terms of the GNU General Public License as published by
+#     the Free Software Foundation, either version 3 of the License, or any later version.
+#
+#     This program is distributed in the hope that it will be useful,
+#     but WITHOUT ANY WARRANTY; without even the implied warranty of
+#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#     GNU General Public License for more details.
+#
+#     You should have received a copy of the GNU General Public License
+#     along with this program.  If not, see <https://www.gnu.org/licenses/>.
+#
+# You can reach the original author via e-Mail: agreenbeb@gmail.com
+#
+
 loading.configUpdateFail=Konnte die Konfiguration nicht aktualisieren, da sie nicht \
 gespeichert werden konnte. Details: \n\
 %error%
@@ -12,7 +31,7 @@ player.saveInventory.offline=Das Inventar eines gestorbenen Spielers konnte nich
 Daher wird es nicht möglich sein dieses beim Wiederbeleben wiederherzustellen.
 chatManager.noMessage=Konnte die angegebene Nachricht nicht finden, die gesendet \
 werden sollte.\n\
-Beschuldige etwas im Stack:}\n\
+Beschuldige etwas im Stack:\n\
 %trace%
 spicord.sending.failed=Es gab einen Fehler beim Senden der Todesnachricht.\n\
 Detaillierter Fehler:\n\
@@ -35,3 +54,13 @@ player.revive.noReviveInventory=Der Spieler %player_name% hat kein Inventar zum 
 Wiederherstellen beim Wiederbeleben gespeichert.
 player.status.notOnline=Fehlschlag beim Speichern von Daten für %player_uuid%! Der \
 Spieler ist offline.
+player.load.fail=Fehler beim Laden der Spielerdaten! Yolo wird nun für alle \
+annehmen, dass diese nicht tod und auch nicht \
+wiederzubeleben sind!
+player.load.corrupted=Die Daten in /data/yolo_player_data.json ist korrumpiert! \
+Korrigiere dies manuell oder lösche die Datei, um dies zu \
+beheben!
+player.unload.failure=Fehler beim Schreiben der Spielerdate. Ist \
+"/data/yolo_player_data.json" verfügbar?
+player.revive.maxAttemptReached=Fehler beim Wiederbeleben eines Spielers! Die maximale \
+Anzahl an Versuchen wurde erreicht!
