refactor: Moved teleportation methods to TeleportationUtils.kt and added additional checks.

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -23,8 +23,8 @@ loading.spicord.failedMessageTemplate=Es gab ein Problem beim Laden einer Discor
 Nachrichtenvorlage:\n\
 %error%\n\
 %stack_trace%
-player.revive.unsafeTeleport=%player_name% wurde beim Wiederbeleben nicht teleportiert, \
-da keine sichere Position gefunden werden konnte.
+player.unsafeTeleport=%player_name% wurde beim nicht teleportiert, da keine \
+sichere Position gefunden werden konnte.
 player.revive.notOnline=Fehlschlag beim Wiederbeleben von %player_uuid%! Der Spieler \
 ist offline.
 player.load.fail=Fehler beim Laden der Spielerdaten! Yolo wird nun für alle \
