Multiple changes (see description): - feat: The `/revive` command has additional inputs - feat: Ability to disable inventory restoring and teleportation on revive - chore: Added command feedback and additional log-messages - refactor: Completely removed AdvancedBan functionality and dependency.

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -26,7 +26,7 @@ Nachrichtenvorlage:\n\
 player.unsafeTeleport=%player_name% wurde beim nicht teleportiert, da keine \
 sichere Position gefunden werden konnte.
 player.revive.notOnline=Fehlschlag beim Wiederbeleben von %player_uuid%! Der Spieler \
-ist offline.
+ist offline!
 player.load.fail=Fehler beim Laden der Spielerdaten! Yolo wird nun für alle \
 annehmen, dass diese nicht tod und auch nicht \
 wiederzubeleben sind!
@@ -35,4 +35,10 @@ Korrigiere dies manuell oder lösche die Datei, um dies zu \
 beheben!
 player.unload.failure=Fehler beim Schreiben der Spielerdate. Ist \
 "/data/yolo_player_data.json" verfügbar?
+player.revive.attempt=Versuche %player_name% wiederzubeleben...
+player.revive.invalidTeleport=Versuchte den Spieler an den Todespunkt zu teleportieren, \
+aber dieser wurde nicht gefunden!
+system.reloaded=Yolo wurde erfolgreich neu geladen.
+system.setRevive=Der Spieler %player_name% wird bei deren nächsten Beitritt \
+wiederbelebt werden.
 
