feat: Player-data is now periodically asynchronously saved to curb data-loss upon the server crashing.

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -33,12 +33,14 @@ wiederzubeleben sind!
 player.load.corrupted=Die Daten in /data/yolo_player_data.json ist korrumpiert! \
 Korrigiere dies manuell oder lösche die Datei, um dies zu \
 beheben!
-player.unload.failure=Fehler beim Schreiben der Spielerdate. Ist \
+player.saveData.failure=Fehler beim Schreiben der Spielerdate. Ist \
 "/data/yolo_player_data.json" verfügbar?
 player.revive.attempt=Versuche %player_name% wiederzubeleben...
 player.revive.invalidTeleport=Versuchte den Spieler an den Todespunkt zu teleportieren, \
 aber dieser wurde nicht gefunden!
 system.reloaded=Yolo wurde erfolgreich neu geladen.
-system.setRevive=Der Spieler %player_name% wird bei deren nächsten Beitritt \
+player.setRevive=Der Spieler %player_name% wird bei deren nächsten Beitritt \
 wiederbelebt werden.
+player.saveData.start=Speichere Spieler-Daten...
+player.saveData.success=Die Spieler-Daten wurden erfolgreich gespeichert.
 
