Multiple things: feat: Instead of giving the player effects upon teleportation, they are now set into a ghost-like state, which is removed upon hostile actions. It lasts 600 ticks (30s@20TPS) refactor: Cleaned up the code a little and replaced logging calls with their lazy variants docs: Updated documentation

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -51,3 +51,6 @@ Zu:\n\
 %new_outcome%
 player.revive.outcome.reason=Der Grund ist:\n\
 %reason%
+player.removeGhostState.notOnline=Konnte die Effekte vom Teleport nach der Wiederbelebung von \
+%uuid% nicht entfernen, da dieser nicht online zu \
+sein scheint.
