--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -16,7 +16,7 @@ Beschuldige etwas im Stack:\n\
 spicord.sending.failed=Es gab einen Fehler beim Senden der Todesnachricht.\n\
 Detaillierter Fehler:\n\
 %error%
-spicord.sending.nullChannel=Die gegebende Kanal-id hat keinen passenden Kanal ergeben.
+spicord.sending.nullChannel=Die gegebene Kanal-id hat keinen passenden Kanal ergeben.
 chatManager.initFailedUserProvided=Fehler beim Laden der gegebenen Chatnachrichten! Sind sie \
 unter "./plugins/yolo/chat_messages.properties" verfügbar?
 loading.spicord.failedMessageTemplate=Es gab ein Problem beim Laden einer Discord \
@@ -33,7 +33,7 @@ wiederzubeleben sind!
 player.load.corrupted=Die Daten in /data/yolo_player_data.json ist korrumpiert! \
 Korrigiere dies manuell oder lösche die Datei, um dies zu \
 beheben!
-player.saveData.failure=Fehler beim Schreiben der Spielerdate. Ist \
+player.saveData.failure=Fehler beim Schreiben der Spielerdaten. Ist \
 "/data/yolo_player_data.json" verfügbar?
 player.revive.attempt=Versuche %player_name% wiederzubeleben...
 player.revive.invalidTeleport=Versuchte den Spieler an den Todespunkt zu teleportieren, \
