--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -35,7 +35,7 @@ Korrigiere dies manuell oder lösche die Datei, um dies zu \
 beheben!
 player.saveData.failure=Fehler beim Schreiben der Spielerdaten. Ist \
 "/data/yolo_player_data.json" verfügbar?
-player.revive.attempt=Versuche %player_name% wiederzubeleben...
+player.revive.attempt=Versuche %player_uuid% wiederzubeleben...
 player.revive.invalidTeleport=Versuchte den Spieler an den Todespunkt zu teleportieren, \
 aber dieser wurde nicht gefunden!
 system.reloaded=Yolo wurde erfolgreich neu geladen.
@@ -43,4 +43,12 @@ player.setRevive=Der Spieler %player_name% wird bei deren nächsten Beitritt \
 wiederbelebt werden.
 player.saveData.start=Speichere Spieler-Daten...
 player.saveData.success=Die Spieler-Daten wurden erfolgreich gespeichert.
+player.revive.outcome.changed=Das Ergebnis des Wiederbelebungsprozesses wurde von %plugin% \
+geändert.\
+Von:\n\
+%original_outcome%\n\
+Zu:\n\
+%new_outcome%
+player.revive.outcome.reason=Der Grund ist:\n\
+%reason%
 
