feat: Reviving a player can now trigger a chat and discord message.

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -44,11 +44,10 @@ wiederbelebt werden.
 player.saveData.start=Speichere Spieler-Daten...
 player.saveData.success=Die Spieler-Daten wurden erfolgreich gespeichert.
 player.revive.outcome.changed=Das Ergebnis des Wiederbelebungsprozesses wurde von %plugin% \
-geändert.\
+geändert.\n\
 Von:\n\
 %original_outcome%\n\
 Zu:\n\
 %new_outcome%
 player.revive.outcome.reason=Der Grund ist:\n\
 %reason%
-
