feat: Added command `undo_revive`.

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -54,3 +54,6 @@ player.revive.outcome.reason=Der Grund ist:\n\
 player.removeGhostState.notOnline=Konnte die Effekte vom Teleport nach der Wiederbelebung von \
 %uuid% nicht entfernen, da dieser nicht online zu \
 sein scheint.
+player.revive.undo.fail=[<red>Yolo</red>] » <red>Dieser Spieler existiert nicht oder wurde noch nicht wiederbelebt.</red>
+player.revive.undo.success=[<red>Yolo</red>] » <green>Letze erfolgreiche Widerbelebung wurde zurückgesetzt.</green>
+player.revive.undo.notOnline=Fehlschlag beim Zurücksetzen des Wiederbeleben von %player_uuid%! Der Spieler ist offline.
