refactor: Cleaned up `PlayerManager` and switched data format to CBOR with one filer per player.

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -27,14 +27,11 @@ player.unsafeTeleport=%player_name% wurde beim Wiederbeleben nicht teleportiert,
 da keine sichere Position gefunden werden konnte.
 player.revive.notOnline=Fehlschlag beim Wiederbeleben von %player_uuid%! Der Spieler \
 ist offline!
-player.load.fail=Fehler beim Laden der Spielerdaten! Yolo wird nun für alle \
-annehmen, dass diese nicht tod und auch nicht \
-wiederzubeleben sind!
-player.load.corrupted=Die Daten in /data/yolo_player_data.json ist korrumpiert! \
-Korrigiere dies manuell oder lösche die Datei, um dies zu \
-beheben!
-player.saveData.failure=Fehler beim Schreiben der Spielerdaten. Ist \
-"/data/yolo_player_data.json" verfügbar?
+player.load.corruptedDir=Die Daten in /data ist korrumpiert! Korrigiere dies manuell oder lösche korrumpierte Dateien, um dies zu beheben! \
+Du kannst nach Hilfe auf dem Discordserver fragen: https://discord.gg/zMqkeRseME
+player.saveData.failure=Fehler beim Schreiben der Spielerdaten für %uuid%. :(\n\
+Hier sind die Details:\
+%error%
 player.revive.attempt=Versuche %player_uuid% wiederzubeleben...
 player.revive.invalidTeleport=Versuchte den Spieler an den Todespunkt zu teleportieren, \
 aber dieser wurde nicht gefunden!
@@ -57,3 +54,6 @@ sein scheint.
 player.revive.undo.fail=[<red>Yolo</red>] » <red>Dieser Spieler existiert nicht oder wurde noch nicht wiederbelebt.</red>
 player.revive.undo.success=[<red>Yolo</red>] » <green>Letze erfolgreiche Widerbelebung wurde zurückgesetzt.</green>
 player.revive.undo.notOnline=Fehlschlag beim Zurücksetzen des Wiederbeleben von %player_uuid%! Der Spieler ist offline.
+player.load.corruptedFile=Die Spielerdaten von %uuid% sind korrumpiert. Bitte manuell korrigieren oder die Datei löschen. \
+Du kannst nach Hilfe auf dem Discordserver fragen: https://discord.gg/zMqkeRseME
+loading.playerDataNotADirectory=%path% sollte ein Verzeichnis sein! Bitte umbenennen oder löschen!
