fix: Player-data will now not get unnecessarily saved on load.

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -57,3 +57,6 @@ player.revive.undo.notOnline=Fehlschlag beim Zurücksetzen des Wiederbeleben von 
 player.load.corruptedFile=Die Spielerdaten von %uuid% sind korrumpiert. Bitte manuell korrigieren oder die Datei löschen. \
 Du kannst nach Hilfe auf dem Discordserver fragen: https://discord.gg/zMqkeRseME
 loading.playerDataNotADirectory=%path% sollte ein Verzeichnis sein! Bitte umbenennen oder löschen!
+player.load.start=Lade Spielerdaten...
+player.load.success=Spielerdaten wurden erfolgreich geladen.\n\
+Automatisches Speichern ist nun aktiv.
