chore: Improved user-facing logging of PlayerManager actions.

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -32,14 +32,13 @@ Du kannst nach Hilfe auf dem Discordserver fragen: https://discord.gg/zMqkeRseME
 player.saveData.failure=Fehler beim Schreiben der Spielerdaten für %uuid%. :(\n\
 Hier sind die Details:\
 %error%
-player.revive.attempt=Versuche %player_uuid% wiederzubeleben...
 player.revive.invalidTeleport=Versuchte den Spieler an den Todespunkt zu teleportieren, \
 aber dieser wurde nicht gefunden!
 system.reloaded=Yolo wurde erfolgreich neu geladen.
-player.setRevive=Der Spieler %player_name% wird bei deren nächsten Beitritt \
+player.revive.set=[<red>Yolo</red>] » Der Spieler <gold>%player_name%</gold> wird bei deren nächsten Beitritt \
 wiederbelebt werden.
 player.saveData.start=Speichere Spieler-Daten...
-player.saveData.success=Die Spieler-Daten wurden erfolgreich gespeichert.
+player.saveData.done=Alle Spieler-Daten wurden gespeichert.
 player.revive.outcome.changed=Das Ergebnis des Wiederbelebungsprozesses wurde von %plugin% \
 geändert.\n\
 Von:\n\
@@ -57,6 +56,13 @@ player.revive.undo.notOnline=Fehlschlag beim Zurücksetzen des Wiederbeleben von 
 player.load.corruptedFile=Die Spielerdaten von %uuid% sind korrumpiert. Bitte manuell korrigieren oder die Datei löschen. \
 Du kannst nach Hilfe auf dem Discordserver fragen: https://discord.gg/zMqkeRseME
 loading.playerDataNotADirectory=%path% sollte ein Verzeichnis sein! Bitte umbenennen oder löschen!
+player.load.legacyConversion.fail=Fehler beim konvertieren alter Spielerdaten.
+player.load.legacyConversion.success=Alte Spielerdaten wurden erfolgreich konvertiert.
+player.deathBan.onJoin=Spieler %uuid% wurde abgewiesen, da dieser tot ist.
+player.deathBan.kick=Spieler %uuid% wurde gebannt, weil dieser im Hardcoremodus gestorben ist.
 player.load.start=Lade Spielerdaten...
 player.load.success=Spielerdaten wurden erfolgreich geladen.\n\
 Automatisches Speichern ist nun aktiv.
+
+
+
