test: Make managers no longer singletons for testing purposes. Also fix `SingularPlayerAutoSave` sometimes blocking shutdown with `isRunning` check.

--- a/src/main/resources/i18n_de_DE.properties
+++ b/src/main/resources/i18n_de_DE.properties
@@ -52,11 +52,11 @@ player.removeGhostState.notOnline=Konnte die Effekte vom Teleport nach der Wiede
 sein scheint.
 player.revive.undo.fail=[<red>Yolo</red>] » <red>Dieser Spieler existiert nicht oder wurde noch nicht wiederbelebt.</red>
 player.revive.undo.success=[<red>Yolo</red>] » <green>Letze erfolgreiche Widerbelebung wurde zurückgesetzt.</green>
-player.revive.undo.notOnline=Fehlschlag beim Zurücksetzen des Wiederbeleben von %player_uuid%! Der Spieler ist offline.
+player.revive.undo.notOnline=Fehlschlag beim Zurücksetzen des Wiederbelebens von %player_uuid%. Der Spieler ist offline.
 player.load.corruptedFile=Die Spielerdaten von %uuid% sind korrumpiert. Bitte manuell korrigieren oder die Datei löschen. \
 Du kannst nach Hilfe auf dem Discordserver fragen: https://discord.gg/zMqkeRseME
 loading.playerDataNotADirectory=%path% sollte ein Verzeichnis sein! Bitte umbenennen oder löschen!
-player.load.legacyConversion.fail=Fehler beim konvertieren alter Spielerdaten.
+player.load.legacyConversion.fail=Fehler beim Konvertieren alter Spielerdaten.
 player.load.legacyConversion.success=Alte Spielerdaten wurden erfolgreich konvertiert.
 player.deathBan.onJoin=Spieler %uuid% wurde abgewiesen, da dieser tot ist.
 player.deathBan.kick=Spieler %uuid% wurde gebannt, weil dieser im Hardcoremodus gestorben ist.
